# ThothBot

./: checks.py  guild_manager.py  keep_alive.py  main.py  pyproject.toml
check/: bot_edit_permission.py  missing_bot_settings.py
cogs/: guild_settings_cog.py  join_guild_cog.py  translation_cog.py
model/: guild_settings.py
services/: guild_settings_service.py  join_guild_service.py  translation_service.py
